version 0.8.2 - XX-MMM-2009
 . Actions: added Ease Elastic actions (issue #530)
 . Actions: added Ease Bounce actions (issue #546)
 . BitmapFontAtlas: fixed contentSize (issue #536, #537, #538)
 . CocosDenshion: muted property in SimpleAudioEngine (issue #526)
 . CocosNode: improved doxygen documentation (issue #XXX)
 . Director: added convertToUI and renamed convertCoordinate to convertToGL (issue #531)
 . Director: fixed 2 leaks on Director#end (issue #524)
 . Documentation: doxygen builds OK when there are spaces in the path (issue #540)
 . RenderTexture: added RenderTexture test (issue #XXX)
 . TileMap: TMX supports multiple tilesets (1 tileset per layer) (issue #510)
 . Transition: ease actions can be overriden (issue #548)
 
version 0.8.1 - 26-Ago-2009
 . ActionManager: doesn't delete running actions (issue #481)
 . Box2d: using google code r10 (v2.1.0) (issue #494)
 . CocosDenshion: resumeBackground music (issue #513)
 . MultiplexLayer: removes child using cleanup:YES (issue #466)
 . Particles: no negative size (issue #514)
 . Resources: added new cocos2d logos (issue #521)
 . Template: added Icon.png and Default.png (part of issue #469)
 . Texture2D: using CCLOG instead of NSLog+#ifdef (issue #519)

version 0.8.1-rc - 19-Ago-2009
 . All: Using nonatomic properties (issue #509)
 . ActionManager: fixed crash (issue #490)
 . Actions: RotateTo always rotates to shortest angle fix (issue #499)
 . Box2d: using google code r8 (issue #494)
 . Box2d: added box2dTestBed (part of issue #494)
 . CocosDenshion: correct channel in SimpleAudioEngine (issue #465)
 . CocosDenshion: update buffer status after deletion ( issue #486)
 . CocosDenshion: SimpleAudioEngine can stop sounds (issue #498)
 . Parallax: update children at draw (issue #471)
 . TileMap: TMX maps starts at 0,0 position (part of issue #462)
 . TileMap: TMX getter/setters works OK with async maps (issue #506)
 . TileMap: anchorPoint works OK (issue #508)